# CodeReviewer

./: .env.example  .gitignore  Dockerfile.test  Dockerfile.validator  PRD.md  README.md  inference.py  openenv.yaml  pyproject.toml  test_suite.py  validate-submission.sh
server/: Dockerfile  README.md  app.py  env.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_suite.py  train.py
server/graders/: __init__.py  full_review.py  identify_bug.py  performance_refactor.py  security_audit.py  suggest_fix.py
server/tasks/: __init__.py  dataset.py
